examples/test/testpolicy11860.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11860
  namespace: namespace456
spec:
  podSelector:
    matchLabels:
      key44: value22
      key49: value4
      key3: value42
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key17: value6
      podSelector:
        matchLabels:
          key41: value1
